# shapereader

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README.md  byteorder.h  configure.ac  convert.c  convert.h  dbf.c  dbf.h  shapereader.bib  shp-box.h  shp-multipatch.c  shp-multipatch.h  shp-multipoint.c  shp-multipoint.h  shp-multipointm.c  shp-multipointm.h  shp-multipointz.c  shp-multipointz.h  shp-point.c  shp-point.h  shp-pointm.h  shp-pointz.h  shp-polygon.c  shp-polygon.h  shp-polygonm.c  shp-polygonm.h  shp-polygonz.c  shp-polygonz.h  shp-polyline.c  shp-polyline.h  shp-polylinem.c  shp-polylinem.h  shp-polylinez.c  shp-polylinez.h  shp-range.h  (+4 more)
.github/workflows/: codeql.yml  gh-pages.yml  linux.yml
tests/: CMakeLists.txt  Makefile.am  create_data.pl  test_byteorder.c  test_convert.c  test_dbase2.c  test_dbf.c  test_multipatch.c  test_multipoint.c  test_multipointm.c  test_multipointz.c  test_null.c  test_point.c  test_pointm.c  test_pointz.c  test_polygon.c  test_polygonm.c  test_polygonz.c  test_polyline.c  test_polylinem.c  test_polylinez.c
tests/data/: Makefile.am  multipatch.shp  multipoint.shp  multipointm.shp  multipointz.shp  null.shp  point.shp  pointm.shp  pointz.shp  polygonm.shp  polygonm.shx  polygonz.shp  polyline.dbf  polyline.shp  polyline.shx  polylinem.shp  polylinem.shx  polylinez.shp
